Add output files.

--- a/data/country_commercial_guides/colombia/2015-01-02-chap10.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap10.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap10.html' 
+published: true 
+---
 <h1 id="chap10">Chapter 10: Guide to Our Services</h1>
 
 The U.S. Commercial Service offers customized solutions to help your business enter and succeed in markets worldwide. Our global network of trade specialists will work one-on-one with you through every step of the exporting process, helping you to:
