--- a/data/country_commercial_guides/colombia/2015-01-02-chap3.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap3.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap3.html' 
+published: true 
+---
 <h1 id="chap3">Chapter 3: Selling U.S. Products and Services</h1>
 
 * [Using an Agent or Distributor](#using-an-agent-or-distributor)
