--- a/data/country_commercial_guides/colombia/2015-01-02-chap5.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap5.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap5.html' 
+published: true 
+---
 <h1 id="chap5">Chapter 5: Trade Regulations and Standards</h1>
 
 * [Import Tariffs](#import-tariffs)
