--- a/data/country_commercial_guides/colombia/2015-01-02-chap6.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap6.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap6.html' 
+published: true 
+---
 <h1 id="chap6">Chapter 6: Investment Climate</h1>
 
 * [Openness to Foreign Investment](#openness-to-foreign-investment)
