--- a/data/country_commercial_guides/colombia/2015-01-02-chap7.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap7.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap7.html' 
+published: true 
+---
 <h1 id="chap7">Chapter 7: Trade and Project Financing</h1>
 
 * [How Do I Get Paid (Methods of Payment)](#how-do-I-get-paid)
