--- a/data/country_commercial_guides/colombia/2015-01-02-chap8.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap8.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap8.html' 
+published: true 
+---
 <h1 id="chap8">Chapter 8: Business Travel</h1>
 
 * [Business Customs](#business-customs)
