--- a/data/country_commercial_guides/colombia/2015-01-02-chap9.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap9.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap9.html' 
+published: true 
+---
 <h1 id="chap9">Chapter 9: Contacts, Market Research, and Trade Events</h1>
 
 * [Contacts](#contacts)
