--- a/data/country_commercial_guides/colombia/2015-01-02-chap1.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap1.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap1.html' 
+published: true 
+---
 <h1 id="chap1">Chapter 1: Doing Business In Colombia</h1>
 
 * [Market Overview](#market-overview)
