--- a/data/country_commercial_guides/colombia/2015-01-02-chap2.md
+++ b/data/country_commercial_guides/colombia/2015-01-02-chap2.md
@@ -1,3 +1,7 @@
+--- 
+permalink: 'chap2.html' 
+published: true 
+---
 <h1 id="chap2">Chapter 2: Political and Economic Environment</h1>
 
 For background information on the political and economic environment of the country, please click on the link below to the U.S. Department of State Background Notes.
